--- a/backend/essensys-passive.service
+++ b/backend/essensys-passive.service
@@ -5,6 +5,7 @@ After=network.target
 [Service]
 Type=simple
 User=ubuntu
+WorkingDirectory=/home/ubuntu
 ExecStart=/usr/local/bin/essensys-passive-backend
 Restart=always
 Environment=PORT=8080
