feat: implement SMTP email sending and env config

--- a/backend/essensys-passive.service
+++ b/backend/essensys-passive.service
@@ -9,6 +9,7 @@ WorkingDirectory=/home/ubuntu
 ExecStart=/usr/local/bin/essensys-passive-backend
 Restart=always
 Environment=PORT=8080
+EnvironmentFile=/home/ubuntu/.env
 
 [Install]
 WantedBy=multi-user.target
