docs: update .env.template with oauth variables

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,10 +1,27 @@
 # SMTP Configuration
-SMTP_HOST=smtp.example.com
-SMTP_PORT=587
-SMTP_USER=votre_email@example.com
-SMTP_PASS=votre_mot_de_passe
+SMTP_HOST=mail.infomaniak.com
+SMTP_PORT=465
+SMTP_USER=user@example.com
+SMTP_PASS=password
+SMTP_FROM=noreply@example.com
 
-# Optional: Override the "From" address
-# If not set, defaults to SMTP_USER.
-# Make sure your SMTP server authorizes this alias!
-SMTP_FROM=noreply@rineau.eu
+# Server Configuration
+PORT=8080
+FRONTEND_URL=https://mon.essensys.fr/
+
+# Admin Security
+ADMIN_TOKEN=static_token_for_legacy_access
+ADMIN_EMAILS=admin@example.com,developer@example.com
+JWT_SECRET=change_me_to_a_random_long_string
+
+# Google OAuth
+GOOGLE_CLIENT_ID=your_google_client_id.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REDIRECT_URL=https://mon.essensys.fr/api/auth/google/callback
+
+# Apple OAuth (Sign In with Apple)
+APPLE_TEAM_ID=XYZ1234567
+APPLE_CLIENT_ID=fr.essensys.web
+APPLE_KEY_ID=ABC1234567
+APPLE_KEY_FILE=/home/ubuntu/AuthKey_ABC1234567.p8
+APPLE_REDIRECT_URL=https://mon.essensys.fr/api/auth/apple/callback
