docs: add database configuration to .env.template

--- a/backend/.env.template
+++ b/backend/.env.template
@@ -9,6 +9,13 @@ SMTP_FROM=noreply@example.com
 PORT=8080
 FRONTEND_URL=https://mon.essensys.fr/
 
+# Database Configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=essensys
+DB_PASSWORD=essensys_db_pass
+DB_NAME=essensys
+
 # Admin Security
 ADMIN_TOKEN=static_token_for_legacy_access
 ADMIN_EMAILS=admin@example.com,developer@example.com
