docs: add rules raci matrix and fix layout auth check

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,4 +10,5 @@ nav:
   - Features:
     - User Profile & Devices: features.md
     - Authentication: authentication.md
+    - Roles & Permissions: roles_matrix.md
   - Configuration: configuration.md
