feat: audit trail implementation (backend, frontend, docs)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,4 +11,5 @@ nav:
     - User Profile & Devices: features.md
     - Authentication: authentication.md
     - Roles & Permissions: roles_matrix.md
+    - Audit Trail: audit_trail.md
   - Configuration: configuration.md
